collapse airavata-api into single jar, merge credential-store into airavata-api